changed some of the vision files and added vision onto personaListView